# sexy-terminal-panel

./: .gitignore  Cargo.toml  DESIGN.md  INSTALL.md  README.md  clippy.toml
crates/stp-cli/: Cargo.toml
crates/stp-cli/src/: broker_commands.rs  cli.rs  commands.rs  main.rs  output.rs  panel.rs  session_cleanup.rs  state.rs
crates/stp-cli/src/panel/: bindings.rs  layout.rs  rendering.rs  session_sidebar.rs  session_sidebar_test_support.rs  session_sidebar_tests.rs  shell.rs  terminal_size.rs  tmux_grid.rs  tmux_panel.rs  tmux_panel_tests.rs
crates/stp-cli/src/panel/rendering/: grid.rs  grid_tests.rs
crates/stp-cli/src/tui/: broker_link.rs  input.rs  layout.rs  mod.rs  render.rs  state.rs
crates/stp-cli/src/tui/render/: separators.rs  tests.rs
crates/stp-cli/tests/: broker_cli_tests.rs  cli_tests.rs  detach_tests.rs  panel_auto_connect_live_tests.rs  panel_auto_connect_support.rs  panel_base_index_live_tests.rs  panel_layout_live_tests.rs  panel_layout_support.rs  panel_live_tests.rs  panel_sidebar_click_live_tests.rs  panel_terminate_live_tests.rs  panel_terminate_support.rs  registry_cleanup_tests.rs  terminate_tests.rs
crates/stp-core/: Cargo.toml
crates/stp-core/src/: ids.rs  lib.rs  protocol.rs  registry.rs  workspace.rs
crates/stp-core/src/protocol/: codec.rs  error.rs  model.rs
crates/stp-core/src/registry/: backend.rs  model.rs  store.rs
crates/stp-core/tests/: protocol_tests.rs  registry_backend_tests.rs  registry_tests.rs
crates/stp-pty/: Cargo.toml
crates/stp-pty/src/: client.rs  config.rs  error.rs  lib.rs  lifecycle.rs  server.rs  session.rs  session_impl.rs
crates/stp-pty/tests/: lifecycle_tests.rs  session_support.rs  session_tests.rs
crates/stp-tmux/: Cargo.toml
crates/stp-tmux/src/: adapter.rs  binding.rs  error.rs  lib.rs  pane.rs  runner.rs  session.rs
crates/stp-tmux/tests/: adapter_panel_primitives_tests.rs  adapter_tests.rs
docs/: usage.html
extensions/cursor/: package.json  sexy-terminal-panel-cursor-0.1.0.vsix
extensions/cursor/src/: brokerProtocol.ts  extension.ts  stpCommandRunner.ts  stpRegistry.ts  stpTerminalProfile.ts  terminalCommands.ts  terminalProfile.ts  terminalSessions.ts
extensions/cursor/tests/: brokerProtocol.test.ts  stpRegistry.test.ts  terminalCloseCommands.test.ts  terminalCommands.test.ts  terminalProfile.test.ts  terminalSessions.test.ts  terminalTreeModel.test.ts
extensions/vscode/: package.json  sexy-terminal-panel-vscode-0.1.0.vsix  tsconfig.json
extensions/vscode/src/: extension.ts  extensionConfig.ts  stpRegistry.ts  terminalProfile.ts  terminalSessions.ts  terminalTree.ts  terminalTreeModel.ts
extensions/vscode/tests/: stpRegistry.test.ts  terminalCommands.test.ts  terminalProfile.test.ts
scripts/: install-local.sh  uninstall-local.sh
scripts/qa/: check-loc.sh  e2e-local.sh  edge-cases.sh  release-gate.sh
