[package]
name = "stp-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
nix.workspace = true
portable-pty.workspace = true
stp-core.workspace = true
thiserror.workspace = true
vt100.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
